--- a/recipemanager/templates/registration/password_reset_confirm.html
+++ b/recipemanager/templates/registration/password_reset_confirm.html
@@ -2,19 +2,19 @@
 
 {% block content %}
     {% if validlink %}
-<div class="wrap">
-    <form method="post">
-        <fieldset>
-            <legend><h3>Reset Password</h3></legend>
-                {% csrf_token %}
-                <input type="password" class="form" id="id_password" name="password1" placeholder="Password"/>
-                    {{ form.password1.errors }}
-                <input type="password" class="form" id="id_password" name="password1" placeholder="Confirm Password"/>
-                    {{ form.password2.errors }}
-            <input type="submit" id="button" value="Submit">
-        </fieldset>
-    </form>
-</div>
+        <div class="wrap">
+            <form action="" method="post">{% csrf_token %}
+                <fieldset>
+                    <legend><h3>Reset Password</h3></legend>
+
+                        <input type="password" class="form" id="id_new_password1" name="new_password1" placeholder="Password"/>
+                            {{ form.password1.errors }}
+                        <input type="password" class="form" id="id_new_password2" name="new_password2" placeholder="Confirm Password"/>
+                            {{ form.password2.errors }}
+                    <input type="submit" id="button" value="Submit">
+                </fieldset>
+            </form>
+        </div>
     {% else %}
         <p>This reset link is no longer valid!</p>
     {% endif %}
