--- a/recipemanager/templates/registration/password_reset_done.html
+++ b/recipemanager/templates/registration/password_reset_done.html
@@ -3,7 +3,8 @@
 {% block content %}
 <div class="wrap">
     <fieldset>
-        <legend><h3>Reset Complete</h3></legend>
+        <legend><h3>Reset Password</h3></legend>
+        <p class="links"> Please follow link in your email to reset password</p>
     <form action="{% url 'login' %}">
         <input type="submit" id="button" value="Login">
    </form>
