--- a/recipemanager/templates/full_recipe.html
+++ b/recipemanager/templates/full_recipe.html
@@ -13,8 +13,8 @@
 
     <br>
     <h2>Directions</h2>
-            {{ recipe.directions }}
-{% if recipe.user == request.user %}
+            {{ directions | safe }}
+{% if can_edit %}
     <form action="{% url 'delete_recipe' recipe.id %}" method="post">
         {% csrf_token %}
     <input type="submit" id="button" value="Delete">
