--- a/recipemanager/templates/register.html
+++ b/recipemanager/templates/register.html
@@ -7,15 +7,15 @@
             <legend><h3>Sign Up</h3></legend>
             {% csrf_token %}
                 <input type="text" class="form" id="id_first_name" maxlength="30" name="first_name" placeholder="Your First Name" />
-{#                    {{ form.first_name.errors }}#}
+                    {{ form.first_name.errors }}
                 <input type="text" class="form" id="id_last_name" maxlength="30" name="last_name" placeholder="Your Last Name"/>
-{#                    {{ form.last_name.errors }}#}
+                    {{ form.last_name.errors }}
                 <input type="text" class="form" id="id_username" maxlength="30" name="username" placeholder="Username"/>
-{#                    {{ form.username.errors }}#}
+                    {{ form.username.errors }}
                 <input type="text" class="form" id="id_email" maxlength="254" name="email" placeholder="Email"/>
-{#                    {{ form.email.errors }}#}
+                    {{ form.email.errors }}
                 <input type="password" class="form" id="id_password" name="password1" placeholder="Password"/>
-{#                    {{ form.password1.errors }}#}
+                    {{ form.password1.errors }}
                 <input type="password" class="form" id="id_password" name="password2" placeholder="Confirm Password"/>
                     {{ form.password2.errors }}
         <input type="submit" id="button" value="Register">
