--- a/recipemanager/templates/shoppinglist.html
+++ b/recipemanager/templates/shoppinglist.html
@@ -5,7 +5,7 @@
 <div class="allrecipewrap">
     <fieldset class="allrecipes">
         <legend class="allrecipes"><h3>Shopping List</h3></legend>
-
+{% if user.is_authenticated %}
     <select id="aisleSelect" name="selectAisle" class="category">
         <option value="uncategorized">Choose an aisle</option>
         <option value="baby">Baby Care</option>
@@ -214,7 +214,13 @@
         <p>**Double Click to remove from list</p>
         <button id="clearAllItems">Clear All Items</button>
     </div>
-
+{% endif %}
+    {% if not user.is_authenticated %}
+    <p class="links">Please log in to add or view your shopping list</p>
+    <form action="{% url 'login' %}">
+        <input type="submit" id="addbutton" value="Login">
+   </form>
+    {% endif %}
     </fieldset>
 </div>
 {% endblock %}
